RESOLVED FIXED217940
Fix crash in RenderLayerBacking::updateClippingStackLayerGeometry()
https://bugs.webkit.org/show_bug.cgi?id=217940
Summary Fix crash in RenderLayerBacking::updateClippingStackLayerGeometry()
Simon Fraser (smfr)
Reported 2020-10-19 20:21:23 PDT
Fix crash in RenderLayerBacking::updateClippingStackLayerGeometry()
Attachments
Patch (1.73 KB, patch)
2020-10-19 20:22 PDT, Simon Fraser (smfr)
no flags
Patch (1.76 KB, patch)
2020-10-19 20:23 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2020-10-19 20:22:01 PDT
Simon Fraser (smfr)
Comment 2 2020-10-19 20:23:34 PDT
Simon Fraser (smfr)
Comment 3 2020-10-19 20:29:02 PDT
Simon Fraser (smfr)
Comment 4 2020-10-19 20:47:15 PDT
Note You need to log in before you can comment on or make changes to this bug.