Fix crash in RenderLayerBacking::updateClippingStackLayerGeometry() https://bugs.webkit.org/show_bug.cgi?id=217940 <rdar://problem/70316952>

Reviewed by Tim Horton.

Crash data suggest that entry.clipData.clippingLayer (which is a WeakRef<RenderLayer>)
can be null, so check it.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateClippingStackLayerGeometry):

Canonical link: https://commits.webkit.org/230663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268712 268f45cc-cd09-0410-ab3c-d52691b4dbfc